@@ -1,3 +1,7 @@
+2003-11-28  Dominique Dumont  <domi@komarr.grenoble.hp.com>
+
+	* t/basic.t (new): works with Tk804.025 
+
 2003-11-19  Dominique Dumont  <domi@komarr.grenoble.hp.com>
 
 	* ObjScanner.pm v2.6: all configuration options can be called with
